--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 .App {
-  text-align: center;
 }
 
 .App-logo {
@@ -35,4 +34,40 @@
   to {
     transform: rotate(360deg);
   }
+}
+navlink:hover{
+  background-color: black;
+  color: white;
+  font-weight: 400;
+}
+.card{
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.post{
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 3rem;
+}
+.form{
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 3rem;
+}
+.comment_text_area{
+  width:100%;
+  height:fit-content;
+  /* border: none; */
+}
+.newpostbtn{
+  margin-left: auto;
+}
+.textarea{
+  width: 100%;
+  /* height: 200px; */
 }
